// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Archive > snapshot 1`] = `
[
  <p>
    Archive
  </p>,
  <details
    open={true}
  >
    <summary
      data-testid="year"
    >
      <a
        aria-label="year-link"
        className="link"
        href="/archives/2021"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        2021
        (
        3
        )
      </a>
    </summary>
    <ul>
      <li
        aria-label="month-link"
        className="mb-0"
      >
        <a
          className="link"
          href="/archives/2021/01"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <p>
               
            2021
            -
            01
            (
            3
            )
          </p>
        </a>
      </li>
    </ul>
  </details>,
  <details
    open={false}
  >
    <summary
      data-testid="year"
    >
      <a
        aria-label="year-link"
        className="link"
        href="/archives/2020"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        2020
        (
        4
        )
      </a>
    </summary>
    <ul>
      <li
        aria-label="month-link"
        className="mb-0"
      >
        <a
          className="link"
          href="/archives/2020/12"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <p>
               
            2020
            -
            12
            (
            3
            )
          </p>
        </a>
      </li>
      <li
        aria-label="month-link"
        className="mb-0"
      >
        <a
          className="link"
          href="/archives/2020/11"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <p>
               
            2020
            -
            11
            (
            1
            )
          </p>
        </a>
      </li>
    </ul>
  </details>,
]
`;

exports[`Archive snapshot 1`] = `
[
  <p>
    Archive
  </p>,
  <details
    open={true}
  >
    <summary
      data-testid="year"
    >
      <a
        aria-label="year-link"
        className="link"
        href="/archives/2021"
      >
        2021
        (
        3
        )
      </a>
    </summary>
    <ul>
      <li
        aria-label="month-link"
        className="mb-0"
      >
        <a
          className="link"
          href="/archives/2021/01"
        >
          <p>
               
            2021
            -
            01
            (
            3
            )
          </p>
        </a>
      </li>
    </ul>
  </details>,
  <details
    open={false}
  >
    <summary
      data-testid="year"
    >
      <a
        aria-label="year-link"
        className="link"
        href="/archives/2020"
      >
        2020
        (
        4
        )
      </a>
    </summary>
    <ul>
      <li
        aria-label="month-link"
        className="mb-0"
      >
        <a
          className="link"
          href="/archives/2020/12"
        >
          <p>
               
            2020
            -
            12
            (
            3
            )
          </p>
        </a>
      </li>
      <li
        aria-label="month-link"
        className="mb-0"
      >
        <a
          className="link"
          href="/archives/2020/11"
        >
          <p>
               
            2020
            -
            11
            (
            1
            )
          </p>
        </a>
      </li>
    </ul>
  </details>,
]
`;
